Add profiling support